//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  nama String [not null]
  email String [unique, not null]
  password String [not null]
  Dosen Dosen
  Mahasiswa Mahasiswa
  Admin Admin
  Notifikasi Notifikasi [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Notifikasi {
  id String [pk]
  user User [not null]
  userId String [not null]
  judul String [not null]
  isi String [not null]
  read Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Admin {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Dosen {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  Kelas Kelas [not null]
  Challenge Challenge [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Mahasiswa {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  NIM String [unique, not null]
  jumlah_poin Int [not null, default: 0]
  Transaksi_Poin Transaksi_Poin [not null]
  Nilai Nilai [not null]
  Jawaban_Tugas Jawaban_Tugas [not null]
  Jawaban_Ujian Jawaban_Ujian [not null]
  Jawaban_Challenge Jawaban_Challenge [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Transaksi_Poin {
  id String [pk]
  Mahasiswa Mahasiswa [not null]
  mahasiswaId String [not null]
  poin_mahasiswa Int [not null]
  poin_reward Int [not null]
  tanggal_transaksi DateTime [not null]
  Reward Reward
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Reward {
  id String [pk]
  transaksi_poin Transaksi_Poin [not null]
  transaksi_poinId String [unique, not null]
  deskripsi String [not null]
  persyaratan String [not null]
  point Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Nilai {
  id String [pk]
  mahasiswa Mahasiswa [not null]
  mahasiswaId String [not null]
  nilai Int [not null]
  Kelas Kelas
  kelasId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Kelas {
  id String [pk]
  dosen Dosen [not null]
  dosenId String [not null]
  kode String [unique, not null]
  nama String [not null]
  komposisi_tugas Int [not null]
  komposisi_uts Int [not null]
  komposisi_uas Int [not null]
  komposisi_quiz Int [not null]
  Materi Materi [not null]
  Tugas Tugas [not null]
  Ujian Ujian [not null]
  Nilai Nilai [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Materi {
  id String [pk]
  kelas Kelas [not null]
  kelasId String [not null]
  judul String [not null]
  deskripsi String [not null]
  file String [not null]
  tanggal DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tugas {
  id String [pk]
  kelas Kelas [not null]
  kelasId String [not null]
  judul String [not null]
  deskripsi String [not null]
  file String [not null]
  tanggal DateTime [default: `now()`, not null]
  deadline DateTime
  Jawaban_Tugas Jawaban_Tugas
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Jawaban_Tugas {
  id String [pk]
  tugas Tugas [not null]
  tugasId String [unique, not null]
  mahasiswa Mahasiswa [not null]
  mahasiswaId String [not null]
  tanggal_submit DateTime
  file String [not null]
  nilai Int
}

Table Ujian {
  id String [pk]
  kelas Kelas [not null]
  kelasId String [not null]
  judul String [not null]
  deskripsi String [not null]
  file String [not null]
  tanggal DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Jawaban_Ujian Jawaban_Ujian
}

Table Jawaban_Ujian {
  id String [pk]
  ujian Ujian [not null]
  ujianId String [unique, not null]
  mahasiswa Mahasiswa [not null]
  mahasiswaId String [not null]
  tanggal_submit DateTime
  file String [not null]
  nilai Int
}

Table Challenge {
  id String [pk]
  dosen Dosen [not null]
  dosenId String [not null]
  judul String [not null]
  deskripsi String [not null]
  waktu_mulai DateTime [not null]
  waktu_selesai DateTime [not null]
  pilihan_1 String [not null]
  pilihan_2 String [not null]
  pilihan_3 String [not null]
  pilihan_4 String [not null]
  poin Int [not null]
  jawaban String [not null]
  tanggal DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Jawaban_Challenge {
  id String [pk]
  mahasiswa Mahasiswa [not null]
  mahasiswaId String [not null]
  jawaban String [not null]
  penilaian Int
  hadiah_poin Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Notifikasi.userId > User.id [delete: Cascade]

Ref: Admin.userId - User.id [delete: Cascade]

Ref: Dosen.userId - User.id [delete: Cascade]

Ref: Mahasiswa.userId - User.id [delete: Cascade]

Ref: Transaksi_Poin.mahasiswaId > Mahasiswa.id [delete: Cascade]

Ref: Reward.transaksi_poinId - Transaksi_Poin.id [delete: Cascade]

Ref: Nilai.mahasiswaId > Mahasiswa.id [delete: Cascade]

Ref: Nilai.kelasId > Kelas.id

Ref: Kelas.dosenId > Dosen.id [delete: Cascade]

Ref: Materi.kelasId > Kelas.id [delete: Cascade]

Ref: Tugas.kelasId > Kelas.id [delete: Cascade]

Ref: Jawaban_Tugas.tugasId - Tugas.id [delete: Cascade]

Ref: Jawaban_Tugas.mahasiswaId > Mahasiswa.id [delete: Cascade]

Ref: Ujian.kelasId > Kelas.id [delete: Cascade]

Ref: Jawaban_Ujian.ujianId - Ujian.id [delete: Cascade]

Ref: Jawaban_Ujian.mahasiswaId > Mahasiswa.id [delete: Cascade]

Ref: Challenge.dosenId > Dosen.id [delete: Cascade]

Ref: Jawaban_Challenge.mahasiswaId > Mahasiswa.id [delete: Cascade]